# cp-rs

./: Cargo.toml  flake.nix  shell.nix
src/: main.rs
