[package]
name = "cp-rs"
version = "0.1.0"
authors = ["Joshua Enokson <joshua@pop-os.localdomain>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
crossterm = "0.19.0"
indicatif = "0.15.0"
num_cpus = "1.13.0"
tokio = "1.1.0"