[package]
name = "cp-rs"
version = "0.1.0"
authors = ["Joshua Enokson <joshua@pop-os.localdomain>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.14"
num_cpus = "1.13.0"
syslog = "6.0.1"